# agilex-trailer

ws/: build.sh
ws/src/hunter_description/config/: ackermann_like_controller.yaml
ws/src/hunter_description/description/: robot_core.xacro  ros2_control.xacro  trailer.xacro
ws/src/hunter_description/rviz/: robot_view.rviz
ws/src/hunter_launch/config/: main_params.yaml  simulation_params.yaml  trailer_params.yaml
ws/src/hunter_launch/launch/: simulation.launch.py
ws/src/planner_ros2/: CMakeLists.txt  package.xml
ws/src/planner_ros2/include/planner_ros2/: arc_opt.h  grid_map.h  hybrid_astar.h  mpc.h  planner.h  trailer.hpp
ws/src/planner_ros2/include/utils/: lbfgs.hpp  minco.hpp  traj_anal.hpp
ws/src/planner_ros2/launch/: run_all.launch  run_all.launch.py
ws/src/planner_ros2/msg/: ArcTrailerTraj.msg  PolyTraj.msg  TrailerState.msg
ws/src/planner_ros2/params/: controller.yaml  grid_map.yaml  hybrid_astar.yaml  optimizer.yaml  trailer.yaml
ws/src/planner_ros2/rviz/: test.rviz
ws/src/planner_ros2/src/: arc_opt.cpp  grid_map.cpp  hybrid_astar.cpp  mpc.cpp  planner.cpp  planner_node.cpp  simulator.cpp
ws/src/planning/: package.xml  setup.py
ws/src/planning/planning/: ack_to_twist.py  footprint_publisher.py  odom_to_tf.py  pcd_filter.py  pcd_to_occupancy_grid.py  static_pcd_publisher.py
ws/src/planning/rviz/: test_planning.rviz
