<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>planner_ros2</name>
  <version>0.0.1</version>
  <description>A ROS2 planner package for trailer path planning</description>
  
  <maintainer email="xx@xx.com">xx</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>ackermann_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>casadi</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libboost-all-dev</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
